[package]
name = "fluid-sim"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.2"
winit = "0.24.0"
tokio = { version = "1.1.0", features = ["rt", "rt-multi-thread", "net", "process"] }
glam = { version = "0.12.0", features = ["bytemuck"] }
futures = "0.3.12"
bytemuck = { version = "1.5.0", features = ["derive"] }
rayon = "1.5.0"
once_cell = "1.5.2"
rand_xorshift = "0.3.0"
rand_core = "0.6.1"

[build-dependencies]
spirv-builder = { path = "../rust-gpu/crates/spirv-builder" }
